--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,21 +5,24 @@ version: 0.0.1-dev
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.13.0 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
-  meta: ^1.2.4
-  http: ^0.13.3
+  meta: ^1.7.0
+  http: ^0.13.4
   functions_framework: ^0.4.1
-  shelf: ^1.1.4
-  image: ^3.0.2
-  #gcloud: ^0.7.3
+  gcloud: ^0.8.5
+  googleapis_auth: ^1.3.0
+  shelf: ^1.2.0
+  #shelf_router: ^1.1.2
+  image: ^3.1.1
+  l: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.0.4
   build_verify: ^2.0.0
-  functions_framework_builder: ^0.4.2
+  functions_framework_builder: ^0.4.5
   test: ^1.15.7
   mockito: ^5.0.9
   test_process: ^2.0.0
-  pedantic: ^1.9.2
+  lints: ^1.0.1
