--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,84 @@
-# Files and directories created by pub
-.dart_tool/
-.packages
-
-# Omit commiting pubspec.lock for library packages:
-# https://dart.dev/guides/libraries/private-files#pubspeclock
-pubspec.lock
-
 # Conventional directory for build outputs
 build/
 
 # Directory created by dartdoc
 doc/api/
+/.vscode/
+
+
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+.vscode/
+
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+pubspec.lock
+
+# Web related
+lib/generated_plugin_registrant.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Codegen
+*.g.dart
+*.g.java
+*.g.kt
+*.freezed.dart
+*.gen.dart
+*.moor.dart
+*.mocks.dart
+*.hive.dart
+/lib/src/common/localization/l10n.dart
+/lib/src/common/localization/intl/messages_??.dart
+/lib/src/common/localization/intl/messages_???.dart
+
+# Database
+*.db
+*.sqlite
+*.hive
+*.lock
+
+# Logs
+/logs/
+/coverage/
+
+# Firebase
+#.firebase/
+
+android/keystore.properties
+
+# SKSL shaders warm-up
+*.sksl.json
+
+version.env
